css/style.css
* { 
    margin: 0px;
    padding: 0px;
    border: 0px;
}
@font-face {
    font-family: 'Semplicita Pro';
    src: url(fonts/semplicita/SemplicitaPro-SemiBold.woff2) format('woff2'),
         url(fonts/semplicita/SemplicitaPro-SemiBold.woff) format('woff'),
         url(fonts/semplicita/SemplicitaPro-SemiBold.ttf) format('truetype');
    font-weight: 700;
    font-style: normal;
}
body {
    position: relative;
}

/* ------------------------ HOME-VIDEO ------------------------*/
/*------ VIDEO BACKGROUND [HOME] ------*/
.home-video { 
    padding-top: 2.1%;;
    width: 100%;
    height: 105vh;
    position: relative;
    overflow: hidden;
    border-bottom:  solid 2px;
    border-color: rgb(33, 33, 46);
}
#background-video {
    position: absolute;
    top: 50%;
    left: 50%;
    min-width: 100%;
    min-height: 100%;
    width: auto;
    height: auto;
    z-index: -1;
    transform: translate(-50%, -50%);
}
/* ------ CABEÇALHO [HOME]------*/
.nav {
    width: 96%;
    margin-left: 2%;
    margin-right: 2%;
    background-color: rgb(33, 33, 46);
    display: flex;
    flex-direction: row;
    border-radius: 10px;
    align-items: center;
    height: 11%;
    /* object-fit: contain; */
    /* overflow: hidden; */
}
.nav-logo {
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
    width: 15%;
    height: 100%;
    padding-left: 1%;
    padding-right: 1%;
    background-color: rgb(20, 22, 39);
    display: flex;
    align-items: center;
    justify-content: center;
}
.nav-logo .gw2-logo {
    width: 100%;
}

.nav-itens {
    width: 85%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    padding-right: 1.8%;
}
.nav-itens li {
    object-fit: contain;
    list-style-type: none;
    color: white;
    padding: 0.6em;
    font-family:"Semplicita Pro";
    /* font-family:"Open Sans", Arial, Helvetica, sans-serif; */
    font-weight: bold;
    transition: transform 0.3s ease;
}
.nav-itens .dd-logo {
    object-fit: contain;
    max-width: 12%;
}
.nav-botao {
    margin-left: 1%;
    font-size: 1.15em;
}
.nav-botao:hover {
    background-color: rgb(60, 60, 75);
    border-radius: 8px;
    cursor: pointer; 
}
.nav-icon img{
    width: 88%;
    padding-top: 20%;
    transition: transform 0.2s ease-in-out;
}
.nav-icon:hover {
    /* transform: translateY(-1.5px);     */
    transform: scale(1.1); 
}
.logo-yt {
    max-width: 45px;

}
.logo-discord {
    max-width: 35px;
    object-fit: contain;
}
.logo-gw2 {
    max-width: 35px;
    object-fit: contain;
}
/* ------ TEXT CONTENT BACKGROUNG [HOME] ------*/
.texto-conteudo-home {
    z-index: 1;
    width: 96%;
    margin-top: 9%;
    padding-left: 2%;
    padding-right: 2%;
}
.texto-conteudo-home h1 {
    font-family: 'Semplicita Pro', "Open Sans", Arial, Helvetica, sans-serif;
    font-size: 65px;
    color: white;
    text-shadow: 2px 2px 5px #313131;
}
.texto-conteudo-home p {
    width: 60%;
    padding-top: 3%;
    /* text-indent: 3em; */
    font-size: 1.25em;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 247, 232);
    text-shadow: 2px 2px 5px #313131;
}
.botoes {
    object-fit: contain;
    width: 50%;
    margin-left: 2%;
    margin-top: 1%;
    display: flex;
    flex-direction: row;
    align-items: center;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 179, 37);
    padding-top: 3%;
    height: 10%;
}
.botao-facaparte {
    width: 49%;
    height: 3em;
    background-color: rgba(33, 41, 146, 0.7);
    border: solid 1px;
    border-color: rgba(49, 131, 255, 0.938);
    box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.795);;
    display: flex;
    align-items: center;
    justify-content: center; 
    margin-right: 5%;
}
.botao-facaparte:hover {
    background-color: rgb(1, 28, 116);
    cursor: pointer;
}
.botao-saibamais {
    width: 23%;
    height: 3em;
    background-color: rgba(53, 46, 46, 0.685);
    border: solid 1px;
    border-color: rgba(241, 143, 31, 0.527);
    box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.795);;
    display: flex;
    align-items: center;
    justify-content: center; 
}
.botao-saibamais:hover {
    background-color: #81580c;
    cursor: pointer;
}

/* ------------------------ CONTAINER ------------------------*/
.container {
    width: 100%;
    min-height: 65vh;
    max-height: 80vh;
    border-top:  solid 3px;
    border-bottom:  solid 3px;
    border-color: rgb(22, 19, 19);
    background-color: black;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    object-fit: contain;
    padding-bottom: 1%;
}
.pad-format {
    padding: 2%;
}
.flex-end {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}
.title-content {
    font-family: 'Semplicita Pro', "Open Sans", Arial, Helvetica, sans-serif;
    font-size: 55px;
    color: white;
    text-shadow: 2px 2px 5px #313131;
}
.text-content {
    padding-top: 3%;
    width: 55%;
    font-size: 1.25em;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 247, 232);
    text-shadow: 2px 2px 5px #313131;    
}
/* ------------ QUEM É A DD [CONTAINER-1] --------------*/
.img-1 {
    background-image: url('css/imgs/img7.jpg');
}
.position-btn {
    padding-top: 2%;
}
.botao-trajetoria {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 179, 37);
    width: 29%;
    height: 3em;
    background-color: rgba(189, 21, 21, 0.644);
    border: solid 1px;
    border-color: rgb(255, 0, 0);
    box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.795);;
    display: flex;
    align-items: center;
    justify-content: center;
}
.botao-trajetoria:hover{
    background-color: rgba(156, 5, 0, 0.993);
    cursor: pointer;
}

/* ------------ World VS World [CONTAINER-2] -------------*/
.img-2 {
    background-image: url('css/imgs/img2-2.png');
}


/* ----------- Junte-se a nós [CONTAINER-3] -----------*/

.img-3 {
    background-image: url('css/imgs/img1-1.png');
}
.btn-cont-3 {
    width: 50%;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 179, 37);
    padding-top: 3%;
    height: 10%;
}

/* ----------- Conheça a STAFF [CONTAINER-4] ------------*/
.img-4 {
    background-image: url('css/imgs/img10-1.png');
}
.position-staff-content {
    width: 40%;
    height: 100%;
}
.staff {
    width: 100%;
}
.staff h2 {
    font-family: 'Semplicita Pro', "Open Sans", Arial, Helvetica, sans-serif;
    font-size: 35px;
    text-shadow: 2px 2px 5px #313131;   
}
.title-content {
    padding-right: 3%;
}
.staff .guildleaders {
    color: rgb(240, 33, 33);
}
.staff .commanders {
    color: rgb(233, 233, 36);
}
.staff .staff-text {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 247, 232);
    text-shadow: 2px 2px 5px #313131;
    font-size: 18px; 
}
.btn-cont-4 {
    width: 100%;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 179, 37);
    padding-top: 5%;
    height: 10%;
}

/* ------------------------ FOOTER ------------------------*/
#footer {
    font-family: 'Semplicita Pro', "Open Sans", Arial, Helvetica, sans-serif;
    width: 94%;
    background-color: rgb(9, 9, 12);
    overflow: hidden;
    padding-left: 3%;
    padding-right: 3%;
    color: antiquewhite;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
#footer .footer-btn {
    cursor: pointer;
}
#footer .upper {
    margin-ToP: 2%;
    margin-bottom: 2%;
    /* border: solid 1px;
    border-color: aliceblue;  */
    width: 50%;
    display: flex;
    justify-content: space-between;
    font-weight: bold;
    font-size: 12px;
}
.upper a {
    text-decoration: none;
    color: inherit;
}
.lower {
    /* margin-top: 3%; */
    width: 55%;
    border-top: solid 1px;
    border-color: rgb(97, 103, 107);
}
.lower .copyright {
    padding-top: 2%;
    padding-bottom: 2%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.lower .copyright p {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 10px;
}


/* -------------------- MODAL -------------------- */
.modal-dd-logo {
    position: absolute;
    width: 10%;
    left: 45%; 
    top: 1%;
}
.no-scroll {
    overflow: hidden;
}
.modal {
    display: none; /* Oculta o modal por padrão */
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    max-width: 100%;
    max-height: 100%;
    overflow: auto;
    background-color: rgba(0, 0, 0, 0.459);
}
.modal-content {
    font-size: 1.1em;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: rgb(255, 227, 175);
    text-shadow: 2px 2px 5px #313131;  
    background-image: url(imgs/book.png);
    margin-top: 5.5%;
    margin-bottom: 3%;
    margin-left: 10%;
    margin-right: 10%;
    padding: 5% 3% 3% 3%;
    border: 1px solid #000000;
    overflow: auto;
    position: block;
}
.modal-content h2 {
    color: #fff7df;
    text-align: center;
    margin-bottom: 2%;
    font-size: 30px;
}
.recuo {
    text-indent: 3em;
}
.close-btn {
    color: white;
    float: right;
    font-size: 32px;
    font-weight: bold;
    cursor: pointer;
}

.close-btn:hover,
.close-btn:focus {
    color: rgb(255, 232, 131);
    text-decoration: none;
    cursor: pointer;
}


/* -------------------- ICON BACK TOPO -------------------- */
.back-to-top-btn {
    position: fixed;
    bottom: 2%;
    right: 1%;
    cursor: pointer;
    display: none;
    z-index: 999;
    background-color: transparent;
}
.back-to-top-btn img {
    width: 80%;
}

